# text2ascii

./: LICENSE  README.md  index.html  pyproject.toml  requirements.txt
fonts/: README.md
text2ascii/: __init__.py  cli.py  patterns.py  unicode_renderer.py
