[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2ascii"
version = "0.1.0"
description = "Convert text into large ASCII art banners and Unicode block-style art"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pyfiglet>=1.0,<2.0",
    "colorama>=0.4,<1.0",
]

[project.scripts]
text2ascii = "text2ascii.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
text2ascii = ["fonts/*.flf"]
